# httparser

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
benches/: parse.rs
examples/: example.rs
fuzz/fuzz_targets/: parse_chunk_size.rs  parse_headers.rs  parse_request.rs  parse_request_multspaces.rs  parse_response.rs  parse_response_multspaces.rs
src/: iter.rs  lib.rs  macros.rs
src/simd/: avx2.rs  mod.rs  neon.rs  runtime.rs  sse42.rs  swar.rs
tests/: uri.rs
