[package]
name = "httparser"
version = "1.10.1"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A parser for partially correct HTTP messages"
repository = "https://github.com/testingrequired/httparser"
documentation = "https://docs.rs/httparse"
readme = "README.md"
keywords = ["http", "parser", "no_std"]
categories = [
    "network-programming",
    "no-std",
    "parser-implementations",
    "web-programming",
]
edition = "2018"
build = "build.rs"

[features]
default = ["std"]
std = []

[dependencies]
log = "0.4.27"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"
env_logger = "0.11.8"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(httparse_simd)',
    'cfg(httparse_simd_target_feature_avx2)',
    'cfg(httparse_simd_target_feature_sse42)',
    'cfg(httparse_simd_neon_intrinsics)',
] }
